<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.ForgetPasswordActivity">

    <!--标题控件-->
    <include layout="@layout/tool_bar" />

    <!--内容布局-->
    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_margin"
        android:orientation="vertical">

        <!--用户名和发送验证码容器-->
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--用户名输入框-->
            <EditText
                android:id="@+id/et_username"
                android:layout_marginTop="0dp"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/enter_username"
                android:inputType="textEmailAddress" />

            <!--发送验证码按钮-->
            <Button
                android:id="@+id/bt_send_code"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/send_code"
                android:background="@color/transparent"
                android:layout_width="@dimen/button_width_large"
                android:layout_height="@dimen/button_height"
                android:textColor="@drawable/selector_button_color_primary_light_grey" />

        </LinearLayout>

        <!--验证码输入框-->
        <EditText
            android:id="@+id/et_code"
            style="@style/EditText"
            android:hint="@string/enter_code"
            android:inputType="number"
            android:maxLength="4" />

        <!--密码输入框-->
        <EditText
            android:id="@+id/et_password"
            style="@style/EditText"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLength="15" />

        <!--确认密码输入框-->
        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/EditText"
            android:hint="@string/enter_confirm_password"
            android:inputType="textPassword"
            android:maxLength="15" />

        <!--找回密码按钮-->
        <Button
            android:id="@+id/bt_forget_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/padding_large"
            android:background="@drawable/selector_color_primary"
            android:textColor="@drawable/selector_text_color_primary_reverse"
            android:text="@string/activity_forget_password" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>