<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--头部背景-->
    <View
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/discovery_header_background_height" />

    <!--内容容器-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--轮播图圆角-->
        <androidx.cardview.widget.CardView
            android:layout_marginLeft="@dimen/padding_middle"
            android:layout_marginRight="@dimen/padding_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/radius_small"
            app:cardElevation="0dp">

            <!--轮播图-->
            <ImageView
                android:scaleType="centerCrop"
                android:src="@drawable/dnf"
                android:layout_width="match_parent"
                android:layout_height="@dimen/banner_height" />

        </androidx.cardview.widget.CardView>

        <!--快捷按钮-->
        <LinearLayout
            android:layout_marginTop="@dimen/padding_middle"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--占位控件-->
            <include layout="@layout/fill2" />

            <!--按钮容器-->
            <LinearLayout
                android:id="@+id/ll_fm"
                android:gravity="center"
                android:orientation="vertical"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!--图标-->
                <ImageView
                    android:src="@drawable/selector_fm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <!--文本-->
                <TextView
                    android:layout_marginTop="@dimen/padding_middle"
                    android:textColor="@color/text"
                    android:text="@string/person_fm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--占位控件-->
            <include layout="@layout/fill" />

            <!--按钮容器-->
            <LinearLayout
                android:id="@+id/ll_day"
                android:gravity="center"
                android:orientation="vertical"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!--图标-->
                <ImageView
                    android:src="@drawable/selector_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <!--文本-->
                <TextView
                    android:layout_marginTop="@dimen/padding_middle"
                    android:textColor="@color/text"
                    android:text="@string/day_recommend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--占位控件-->
            <include layout="@layout/fill" />

            <!--按钮容器-->
            <LinearLayout
                android:id="@+id/ll_sheet"
                android:gravity="center"
                android:orientation="vertical"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!--图标-->
                <ImageView
                    android:src="@drawable/selector_sheet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <!--文本-->
                <TextView
                    android:layout_marginTop="@dimen/padding_middle"
                    android:textColor="@color/text"
                    android:text="@string/sheet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--占位控件-->
            <include layout="@layout/fill" />

            <!--按钮容器-->
            <LinearLayout
                android:id="@+id/ll_rank"
                android:gravity="center"
                android:orientation="vertical"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!--图标-->
                <ImageView
                    android:src="@drawable/selector_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <!--文本-->
                <TextView
                    android:layout_marginTop="@dimen/padding_middle"
                    android:textColor="@color/text"
                    android:text="@string/rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--占位控件-->
            <include layout="@layout/fill2" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>